Polish observability changes